# sphinx-revealjs

./: .gitignore  pyproject.toml
sphinx_revealjs/: directives.py  nodes.py
