[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "sphinx_revealjs"
version = "2.1.0"
description = "Sphinx extension with theme to generate Reveal.js presentation"
license = {text = "Apache-2.0"}
authors = [{name = "Kazuya Takei", email = "myself@attakei.net"}]
readme = "README.rst"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Framework :: Sphinx",
    "Framework :: Sphinx :: Extension",
    "Framework :: Sphinx :: Theme",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Documentation :: Sphinx",
    "Topic :: Internet :: WWW/HTTP :: Site Management",
    "Topic :: Multimedia :: Graphics :: Presentation",
    "Topic :: Software Development",
    "Topic :: Software Development :: Documentation",
    "Topic :: Text Processing :: Markup :: HTML",
]

include = [
    "sphinx_revealjs/themes/sphinx_revealjs/static/revealjs4/**/*",
]

[dependencies]
python = "^3.6 | ^3.7 | ^3.8 | ^3.9 | ^3.10"
docutils = "*"
sphinx = "*"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
flake8-docstrings = "^1.5.0"
flake8-isort = "^4.0.0"
pydocstyle = "^5.1.1"
doc8 = "^0.11.2"
beautifulsoup4 = "^4.9.3"
sphinxcontrib-gtagjs = "^0.2.0"
sphinx-rtd-theme = "^0.5.1"
black = "^20.8b1"
Sphinx = "^4.3.2"
bump2version = "^1.0.1"
pytest = "^6.2.5"
sphinx-intl = "^2.0.1"

[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = [
    "tests",
]

